--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "app": ["app/*"],
+    }
   },
   "include": [
     "src",
