--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
+  "plugins": [
+    [
+      "babel-plugin-styled-components", {
+        "ssr": true
+      }
+    ]
+  ],
   "presets": [
     "razzle/babel",
     [
